# lw-feaopt-py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: demo_beam.py  demo_truss.py
feaopt/: __init__.py  analysis_state.py  element_matrices.py  export_profile.py  fea_analysis.py  importers.py  load_case.py  optimize_thickness.py  s_test_2.IGS  structure_geometry.py  structure_plotter.py  subdivide_truss.py
lw_feaopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
profiles/: About profiles.txt  optimised_beam.npz  optimised_beam_loop_0.txt  simple_truss.npz  simple_truss_loop_0.txt  simple_truss_loop_1.txt  simple_truss_loop_2.txt  simple_truss_loop_3.txt  simple_truss_loop_4.txt  simple_truss_loop_5.txt  simple_truss_loop_6.txt  simple_truss_loop_7.txt  simple_truss_loop_8.txt
