[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lw-feaopt"
version = "1.0.0"
description = "Lightweight 2-D Frame Topology Optimisation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
export = ["scikit-image>=0.19"]
all = ["matplotlib>=3.5", "scikit-image>=0.19"]

[tool.setuptools.packages.find]
include = ["feaopt*"]
